# budtender-pos

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  Procfile  README.md  SECURITY.md  conftest.py  docker-compose.yml  gunicorn.conf.py  manage.py  pyproject.toml  stores.example.json
.claude/: launch.json
budtender/: admin.py  catalog.py  education.py  imagemap.py  models.py  pairing.py  persona.py  ranking.py  services.py  suggest.py  urls.py  views.py
budtender/management/commands/: discover_registers.py  login_smoke.py  refresh_inventory.py  warm_menu.py
budtender/migrations/: 0001_initial.py
budtender/static/budtender/: app.css  app.js
budtender/templates/budtender/: _active_panel.html  _carousel.html  _cart.html  _guests.html  _inventory.html  _menu.html  _product_card.html  _profile.html  _submit_result.html  begin.html  customer_full.html  customer_preview.html  login.html  product.html  screen.html  session_detail.html  sessions_list.html  sessions_rollups.html
budtender/tests/: test_pairing.py  test_persona.py  test_personalization.py  test_tracking.py  test_views.py
budtender_pos/: asgi.py  settings.py  urls.py  wsgi.py
budtender_pos.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
core/: ratelimit.py  security.py  uploads.py
customers/: admin.py  intelligence.py  models.py  services.py  tracking.py
customers/management/commands/: purge_visits.py
customers/migrations/: 0001_initial.py  0002_shopvisit_shopevent.py
customers/tests/: test_services.py
deploy/: bootstrap.sh
dutchie/: __init__.py  login.py  pos_read.py  pos_register_client.py  secrets.py  session.py  stores.py  transport.py
idscan/: pipeline.py
idscan/tests/: test_schema.py
scripts/: login_smoke.py  pos_smoke.py
tests/: test_dutchie_units.py  test_pos_register_client.py  test_ranking.py
